autho implementation in main flask app

--- a/templates/index (1).html
+++ b/templates/index (1).html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>EcoIntelli - A hope for future</title>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+
 
 
 
@@ -25,7 +26,7 @@
   <!-- Links for adding twitter icon -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-<!-- Font awesome icons -->
+  <!-- Font awesome icons -->
   <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 
 </head>
@@ -33,12 +34,12 @@
 
 <!--NAV-->
 <nav class="flex">
-    <img src="/images/logo.png" class="logo">
-        <h1 class="medium logo">EcolntelliSense</h1>
+  <img src="{{ url_for('static', filename='images/logo.png') }}" class="logo">
+    <h1 class="medium logo">EcolntelliSense</h1>
     <ul class="nav_links flex">
         <li><a href="#" class="active"><b>About Us</b><iconify-icon icon="material-symbols:home-outline"></iconify-icon></a></li>
         <li><a href="#"><b>Sign Up</b><iconify-icon icon="tdesign:call-1"></iconify-icon></a></li>
-        <li><a href="#"><b>Login</b><iconify-icon icon="mdi:about-circle-outline"></iconify-icon></a></li>
+        <li><a href="/login"><b>Login</b><iconify-icon icon="mdi:about-circle-outline"></iconify-icon></a></li>
         <li>
         </li>
     </ul>
@@ -47,21 +48,16 @@
 <!--HEADER-->
 <header>
 
-
-
-
-
     <figure class="carousel">
 
-        <img src="/images/slideshow/slide1.jpg" alt="" class="blizer" />
+    <img src="{{ url_for('static', filename='images/slideshow/slide1.jpg') }}" alt="" class="blizer" />
 
-  <div class="centered">EcoIntelliSense</div>
+    <div class="centered">EcoIntelliSense</div>
         <div class="para">AI-Driven Environmental Impact Analyzer</div>
 
 
-        <p> < AI-Driven Environmental Impact Analyzer </p>
+        <p> AI-Driven Environmental Impact Analyzer </p>
     </figure>
-
 
 </header>
 
@@ -101,12 +97,6 @@
         </section>
     </div>
 
-
-
-
-
-
-
     <section id="features">
     <!-- Feature Box 1: Sustainable Construction Practices -->
     <div class="feature-box">
@@ -120,7 +110,7 @@
             </div>
         </div>
         <div class="features-img">
-            <img src="/images/first.jpg" alt="Sustainable Construction">
+            <img src="{{ url_for('static', filename='images/first.jpg') }}" alt="Sustainable Construction">
         </div>
     </div>
 
@@ -136,7 +126,7 @@
             </div>
         </div>
         <div class="features-img">
-            <img src="/images/second.jpg" alt="Cost-Effective Solutions">
+            <img src="{{ url_for('static', filename='images/second.jpg') }}" alt="Cost-Effective Solutions">
         </div>
     </div>
 
@@ -152,7 +142,7 @@
             </div>
         </div>
         <div class="features-img">
-            <img src="/images/third.jpg" alt="Innovative Environmental Analysis">
+            <img src="{{ url_for('static', filename='images/third.jpg') }}" alt="Innovative Environmental Analysis">
         </div>
     </div>
 </section>
@@ -269,12 +259,14 @@
     </ul>
     <hr></hr>
     <aside class="sub_footer flex">
-        <p>Made by Viraj, Amrit, Sid, and Lance
-@ Boilermake XI 2024</p>
+        <p>Made by Viraj, Amrit, Sid, and Lance @ Boilermake XI 2024</p>
     </aside>
 </footer>
 <!-- partial -->
   <script  src="./script.js"></script>
+
+
+  
 
 </body>
 </html>
