--- a/templates/index (1).html
+++ b/templates/index (1).html
@@ -3,27 +3,32 @@
 <head>
   <meta charset="UTF-8">
   <title>EcoIntelli - A hope for future</title>
-  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+  <link rel="stylesheet" href="./style.css">
 
-    <!-- partial:index.partial.html -->
-    <!--FONT AWESOME-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 
-    <!--ICONIFY-->
-    <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
 
-    <!--PLUGIN-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+<!-- partial:index.partial.html -->
+<!--FONT AWESOME-->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 
-    <!--GOOGLE FONTS-->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Ceviche+One&family=Cookie&family=Dancing+Script:wght@700&family=El+Messiri:wght@400;500&family=Fruktur&family=Great+Vibes&family=Merienda:wght@700&family=Pacifico&family=Satisfy&display=swap" rel="stylesheet">
+<!--ICONIFY-->
+<script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
+
+<!--PLUGIN-->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
+
+<!--GOOGLE FONTS-->
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link href="https://fonts.googleapis.com/css2?family=Ceviche+One&family=Cookie&family=Dancing+Script:wght@700&family=El+Messiri:wght@400;500&family=Fruktur&family=Great+Vibes&family=Merienda:wght@700&family=Pacifico&family=Satisfy&display=swap" rel="stylesheet">
 
   <!-- Links for adding twitter icon -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-  <!-- Font awesome icons -->
+<!-- Font awesome icons -->
   <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 
 </head>
@@ -31,17 +36,13 @@
 
 <!--NAV-->
 <nav class="flex">
-  <img src="{{ url_for('static', filename='images/logo.png') }}" class="logo">
-    <h1 class="medium logo">EcolntelliSense</h1>
+    <img src="/images/logo.png" class="logo">
+        <h1 class="medium logo">EcolntelliSense</h1>
     <ul class="nav_links flex">
         <li><a href="#" class="active"><b>About Us</b><iconify-icon icon="material-symbols:home-outline"></iconify-icon></a></li>
-        {% if session %}
-        <li><a href="/logout"><b>Log Out</b><iconify-icon icon="tdesign:call-1"></iconify-icon></a></li>
-        {% else %}
         <li><a href="#"><b>Sign Up</b><iconify-icon icon="tdesign:call-1"></iconify-icon></a></li>
-        <li><a href="/login"><b>Login</b><iconify-icon icon="mdi:about-circle-outline"></iconify-icon></a></li>
+        <li><a href="#"><b>Login</b><iconify-icon icon="mdi:about-circle-outline"></iconify-icon></a></li>
         <li>
-        {% endif %}
         </li>
     </ul>
 </nav>
@@ -49,16 +50,21 @@
 <!--HEADER-->
 <header>
 
+
+
+
+
     <figure class="carousel">
 
-    <img src="{{ url_for('static', filename='images/slideshow/slide1.jpg') }}" alt="" class="blizer" />
+        <img src="/images/slideshow/slide1.jpg" alt="" class="blizer" />
 
-    <div class="centered">EcoIntelliSense</div>
+  <div class="centered">EcoIntelliSense</div>
         <div class="para">AI-Driven Environmental Impact Analyzer</div>
 
 
-        <p> AI-Driven Environmental Impact Analyzer </p>
+        <p> < AI-Driven Environmental Impact Analyzer </p>
     </figure>
+
 
 </header>
 
@@ -71,7 +77,7 @@
             <p> A forward-thinking, Balearic-based residential real estate developer operating in prime locations across the islands of Mallorca and Ibiza. Committed to driving progress and commercial success, we focus on delivering results via meticulous development strategies that maximize each project's potential.</p>
         </article>
     </div>
-    
+
     <!--DIVISION_2-->
     <div class="divisions division_2 padding_2x">
         <section class="title_header padding_1x">
@@ -81,22 +87,32 @@
         <section class="cards flex padding_1x">
             <article class="fixed_flex card padding_1x">
                 <iconify-icon icon="la:donate"></iconify-icon>
-                <h3 class="small">INVEST WITH US</h3>
+                <h3 class="small">INVEST WITH US:&#160&#160</h3>
+                <span class="count">215</span> Billion
             </article>
             <article class="fixed_flex card padding_1x">
                 <iconify-icon icon="carbon:collaborate"></iconify-icon>
-                <h3 class="small">COLLABORATE WITH US</h3>
+                <h3 class="small">INVEST WITH US:&#160&#160</h3>
+                <span class="count">3600000</span>
             </article>
             <article class="fixed_flex card padding_1x">
                 <iconify-icon icon="bi:house"></iconify-icon>
-                <h3 class="small">PURCHASING A HOME</h3>
+                <h3 class="small">INVEST WITH US:&#160&#160</h3>
+                <span class="count">1400000000</span>
             </article>
             <article class="fixed_flex card padding_1x">
                 <iconify-icon icon="mdi:frequently-asked-questions"></iconify-icon>
-                <h3 class="small">OTHER INQUIRIES</h3>
+                <h3 class="small">INVEST WITH US:&#160&#160</h3>
+                <span class="count">60</span> Billion
             </article>
         </section>
     </div>
+
+
+
+
+
+
 
     <section id="features">
     <!-- Feature Box 1: Sustainable Construction Practices -->
@@ -111,7 +127,7 @@
             </div>
         </div>
         <div class="features-img">
-            <img src="{{ url_for('static', filename='images/first.jpg') }}" alt="Sustainable Construction">
+            <img src="/images/first.jpg" alt="Sustainable Construction">
         </div>
     </div>
 
@@ -127,7 +143,7 @@
             </div>
         </div>
         <div class="features-img">
-            <img src="{{ url_for('static', filename='images/second.jpg') }}" alt="Cost-Effective Solutions">
+            <img src="/images/second.jpg" alt="Cost-Effective Solutions">
         </div>
     </div>
 
@@ -143,7 +159,7 @@
             </div>
         </div>
         <div class="features-img">
-            <img src="{{ url_for('static', filename='images/third.jpg') }}" alt="Innovative Environmental Analysis">
+            <img src="/images/third.jpg" alt="Innovative Environmental Analysis">
         </div>
     </div>
 </section>
@@ -260,14 +276,12 @@
     </ul>
     <hr></hr>
     <aside class="sub_footer flex">
-        <p>Made by Viraj, Amrit, Sid, and Lance @ Boilermake XI 2024</p>
+        <p>Made by Viraj, Amrit, Sid, and Lance
+@ Boilermake XI 2024</p>
     </aside>
 </footer>
 <!-- partial -->
   <script  src="./script.js"></script>
-
-
-  
 
 </body>
 </html>
