--- a/templates/2ndpage.html
+++ b/templates/2ndpage.html
@@ -29,17 +29,17 @@
   <form action="{{ url_for("submit")}}" method="post">
     <div class="form-group">
       <label>Project Name:</label>
-      <input id="projectname" type="text" required autofocus placeholder="Title of Project" style="border: 1px solid #ccc; padding: 8px;"/>
+      <input name="projectname" id="projectname" type="text" required autofocus placeholder="Title of Project" style="border: 1px solid #ccc; padding: 8px;"/>
     </div>
 
     <div class="form-group">
       <label>Project Location:</label>
-      <input id="projectlocation" type="text" required placeholder="Street Address" style="border: 1px solid #ccc; padding: 8px;"/>
+      <input name="projectlocation" id="projectlocation" type="text" required placeholder="Street Address" style="border: 1px solid #ccc; padding: 8px;"/>
     </div>
 
     <div class="form-group">
       <label>Project Size (sq meters):</label>
-      <input id="projectsize" type="number" required placeholder="Project Dimensions (Enter in Map Below)" style="border: 1px solid #ccc; padding: 8px;"/>
+      <input name="projectsize" id="projectsize" type="number" required placeholder="Project Dimensions (Enter in Map Below)" style="border: 1px solid #ccc; padding: 8px;"/>
     </div>
 
     <div class="form-group">
