--- a/templates/currentprojects.html
+++ b/templates/currentprojects.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dynamic List with Jinja</title>
+          <link href="https://fonts.googleapis.com/css2?family=Ceviche+One&family=Cookie&family=Dancing+Script:wght@700&family=El+Messiri:wght@400;500&family=Fruktur&family=Great+Vibes&family=Merienda:wght@700&family=Pacifico&family=Satisfy&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="./currentProjectsStyle.css">
 </head>
 <body>
 
-  <h1>Dynamic List</h1>
+<div class="header">
+    <img src="/images/logo.png" alt="Logo" class="logo">
+    <span class="logo-text">EcoIntelliSense</span>
+    <h1>Dynamic List</h1>
+</div>
+
 
   <a href="{{ url_for('newproject') }}">
     <button>Add Project</button>
