--- a/templates/currentprojects.html
+++ b/templates/currentprojects.html
@@ -9,13 +9,9 @@
 
   <h1>Dynamic List</h1>
 
-  <a href="{{ url_for('newproject') }}">
-    <button>Add Project</button>
-  </a>
-
-  {% if data_list %}
+  {% if project_list %}
     <ol>
-      {% for item in data_list %}
+      {% for item in project_list %}
         <li>
           <div>{{ item }}</div>
         </li>
@@ -24,6 +20,10 @@
   {% else %}
     <p>No data available.</p>
   {% endif %}
+
+<a href="{{ url_for('newproject') }}">
+  <button>Add Project</button>
+</a>
 
 </body>
 </html>
