--- a/static/currentProjectsStyle.css
+++ b/static/currentProjectsStyle.css
@@ -74,7 +74,8 @@ h1 {
 
         .data-item {
     border: 2px solid #000; /* Border style, adjust color and width as needed */
-    padding-top: 5px; /* Adjust padding as needed */
-          padding-bottom: 5px;
+            width: 80%;
+    padding-top: 60px; /* Adjust padding as needed */
+          padding-bottom: 60px;
     display: inline-block; /* Ensure the rectangle only takes the width of the content */
 }
