--- a/static/ReportDraftStyle.css
+++ b/static/ReportDraftStyle.css
@@ -141,3 +141,13 @@ button:hover {
   opacity: 0.3;
   width: 370px;
 }
+
+.energy-analysis {
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+#map {
+  height: 400px;
+  width: 80%;
+}
