--- a/templates/currentprojects.html
+++ b/templates/currentprojects.html
@@ -25,7 +25,7 @@
     <ol>
       {% for item in data_list %}
         <li>
-          <div class="data-item">{{ item }}</div>
+          {{ item }}
         </li>
       {% endfor %}
     </ol>
